<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_localization_meta</name>
  <version>3.0.3</version>
  <description>Provides nonlinear state estimation through sensor fusion of an abritrary number of sensors.</description>

  <author email="ayrton04@gmail.com">Tom Moore</author> 
  <maintainer email="ayrton04@gmail.com">Tom Moore</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://ros.org/wiki/robot_localization</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_localization_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
